--- a/views/inicio.jade
+++ b/views/inicio.jade
@@ -17,7 +17,7 @@ html(ng-app="jusypazNormalApp" manifest="/cache.manifest" type="text/cache-manif
 
   body
     div.navigation_header.centered
-      img.header_logo(width="40px", height="40px", src="/img/logo_small.png")      
+      img.header_logo(src="/img/siar_small.png")      
       
       div.header_actions.inline(ng-controller="MenuCtrl")
         div.menu_wrapper.inline
