--- a/views/partials/myview_hv.jade
+++ b/views/partials/myview_hv.jade
@@ -1,4 +1,4 @@
-div.info
+div.info.datos_version
    img.icon.right(ng-click="doPrint()" src="/img/print.png")
    h2.info_subtitle(ng-class="{dirty: root.hoja.dirty}") Información personal del desmovilizado 
    hr.title_separator
