--- a/views/partials/myview_menores.jade
+++ b/views/partials/myview_menores.jade
@@ -1,78 +1,91 @@
 div.info
    div.info_wrapper
       div.navegacion_hechos
-         if (is_admin)
-            button.add_action.right(ng-click="add_menor()")
-         div.empty(ng-hide="root.menores.length") No hay menores para este postulado.
+         div.empty(ng-hide="root.menores.length") No hay menores para usted.
          div.hecho_lista(ng-show="root.menores.length") 
             div.hecho_lista_title
-               Hay {{root.menores.length}} menores para este postulado.
-            div.hecho_titulo(ng-class="{selected: $index==root.selectedMenorIndex, dirty: menor.dirty}" ng-click="get_menor($index)" ng-repeat="menor in root.menores") 
-               div.delete_item(ng-click="delete_menor(menor)")
-               div(ng-hide="menor.nombres == 'No especificado'") {{menor.nombres}}&nbsp; {{ menor.apellidos}}
-               div(ng-show="menor.nombres == 'No especificado'") {{menor.cedula_menor}}
-
-
-      div.dialog(ng-show="root.create_menor")    
-         h2.info_subtitle Agregar nuevo menor
-         label.form Nombre del menor
-         br
-         input.dialog_input(ng-model="root.new_menor_title" name="root.new_menor_title" required type="text")
-         br
-         button.buttons(ng-click="crea_menor()" ng-disabled="invalid_form") Crear menor
-         button.buttons(ng-click="cancela_crea_menor()") Cancelar
+               Hay {{root.menores.length}} menores para usted.
+            div.hecho_titulo(ng-class="{selected: $index==root.selectedMenorIndex, dirty: menor.dirty}" ng-click="get_menor($index)" ng-repeat="menor in root.menores") {{root.menor.nombres}} {{root.menor.apellidos}}
 
       div.datos_version(ng-show="root.menores.length")
+         img.icon.right(ng-click="doPrint()" src="/img/print.png")
          h2.info_subtitle Menor
-           div(input-inline-edit="root.menor.cedula_menor" class="inline inline-heading" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="10")
-         table.tab_form_table
+           div.inline.inline-heading {{root.menor.nombres}} {{root.menor.apellidos}}
+         hr.title_separator
+         div.form_wrapper
+           table.tab_form_table
             tr
-               td
+               td.align_right
                   label.small_form Status
-                  div(input-inline-select-menor-status="root.menor.status" opciones="root.opciones_status"  on-save="set_menor_dirty()" ng-focus="edit()" tabindex="21")
                td
+                  div.myview_form_value {{root.menor.status}}
+            tr
+               td.align_right
                   label.small_form Nombres
-                  div(input-inline-edit="root.menor.nombres" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="22")            
                td
+                  div.myview_form_value {{root.menor.nombres}}
+            tr
+               td.align_right
                   label.small_form Apellidos
-                  div(input-inline-edit="root.menor.apellidos" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="23")
-            tr
                td
+                  div.myview_form_value {{root.menor.apellidos}}
+            tr
+               td.align_right
                   label.small_form Alias
-                  div(input-inline-edit="root.menor.alias" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="31")
                td
+                  div.myview_form_value {{root.menor.alias}}
+            tr
+               td.align_right
                   label.small_form Fecha ingreso al BEC
-                  div(input-inline-date="root.menor.fecha_ingreso" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="32")            
                td
+                  div.myview_form_value {{root.menor.fecha_ingreso | date:'dd/MM/yyyy' }}
+            tr
+               td.align_right
                   label.small_form Edad de ingreso al BEC
-                  div(input-inline-edit="root.menor.edad_ingreso" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="33")
-            tr
                td
+                  div.myview_form_value {{root.menor.edad_ingreso}}
+            tr
+               td.align_right
                   label.small_form Edad de desmovilización
-                  div(input-inline-edit="root.menor.edad_desmovilizado" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="41")
                td
+                  div.myview_form_value {{root.menor.edad_desmovilizado}}
+            tr
+               td.align_right
                   label.small_form Frente
-                  div(input-inline-date="root.menor.frente" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="42")    
                td
+                  div.myview_form_value {{root.menor.frente}}
+            tr
+               td.align_right
                   label.small_form Comandante inmediato
-                  div(input-inline-edit="root.menor.comandante" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="43")
-            tr
                td
+                  div.myview_form_value {{root.menor.comandante}}
+            tr
+               td.align_right
                   label.small_form Labor que desarrollaba en el BEC
-                  div(input-inline-edit="root.menor.labor" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="51")
                td
-                  label.small_form Nivél académico
-                  div(input-inline-date="root.menor.nivel_academico" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="52")            
-               td
-                  label.small_form Nombre del acudiente
-                  div(input-inline-edit="root.menor.acudiente" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="53")
+                  div.myview_form_value {{root.menor.labor}}
             tr
+               td.align_right
+                  label.small_form Nivél académico
                td
+                  div.myview_form_value {{root.menor.nivel_academico}}
+            tr
+               td.align_right
+                  label.small_form Nombre del acudiente
+               td
+                  div.myview_form_value {{root.menor.acudiente}}
+            tr
+               td.align_right
                   label.small_form Dirección
-                  div(input-inline-edit="root.menor.direccion" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="61")
                td
+                  div.myview_form_value {{root.menor.direccion}}
+            tr
+               td.align_right
                   label.small_form Telefono
-                  div(input-inline-date="root.menor.telefono" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="62")            
                td
+                  div.myview_form_value {{root.menor.telefono}}
+            tr
+               td.align_right
                   label.small_form Incapacidades
-                  div(input-inline-edit="root.menor.incapacidades" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="63")
+               td
+                  div.myview_form_value {{root.menor.incapacidades}}
