--- a/views/inicio.jade
+++ b/views/inicio.jade
@@ -12,6 +12,7 @@ html(ng-app="jusypazNormalApp" manifest="/cache.manifest" type="text/cache-manif
     script(src='/js/postulado_ctrl_normal.js')
     script(src='/js/inline_normal.js')
     script(src='/js/file_upload.js')
+    script(src='/js/d3.v3.min.js')
 
     title jusypaz - Página de inicio
 
