--- a/views/partials/hv.jade
+++ b/views/partials/hv.jade
@@ -79,3 +79,9 @@ div.info
          td
             label.small_form Descripción 
             div(input-inline-text="root.hoja.bienes_desc" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="75")
+
+   h2.info_subtitle Observaciones del postulado 
+   p(ng-hide="not_empty(root.hoja.mensaje)") No hay observaciones del postulado
+   div(ng-show="root.hoja.mensaje")
+    div(input-inline-text="root.hoja.mensaje" on-save="set_dirty()" ng-focus="edit()" tabindex="206") 
+
