--- a/views/partials/jyp_delitos.jade
+++ b/views/partials/jyp_delitos.jade
@@ -217,6 +217,11 @@ div.info_wrapper
                label.small_form Datos completos 
                div(input-inline-text="v.datos_completos" on-save="set_dirty()" ng-focus="edit()" tabindex="206") 
 
+      h2.info_subtitle Observaciones del postulado 
+      p(ng-hide="not_empty(root.delito.mensaje)") No hay observaciones del postulado
+      div(ng-show="root.delito.mensaje")
+         div(input-inline-text="root.delito.mensaje" on-save="set_dirty()" ng-focus="edit()" tabindex="206") 
+
    div.file_browser(ng-show="showFiles")
       span.close_button.right
          img(id="close_dialog_button" alt="Cerrar" title="Cerrar" ng-click="close_browser()" src="/img/close.png")
