--- a/views/partials/jyp_fosas.jade
+++ b/views/partials/jyp_fosas.jade
@@ -88,6 +88,11 @@ div.info_wrapper
                label.small_form Entregada a los familiares
                div(input-inline-radio="root.fosa.entregada_familia" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="42")
             
+      h2.info_subtitle Observaciones del postulado 
+      p(ng-hide="not_empty(root.fosa.mensaje)") No hay observaciones del postulado
+      div(ng-show="root.fosa.mensaje")
+        div(input-inline-text="root.fosa.mensaje" on-save="set_dirty()" ng-focus="edit()" tabindex="206") 
+
    div.file_browser(ng-show="showFiles")
       span.close_button.right
          img(id="close_dialog_button" alt="Cerrar" title="Cerrar" ng-click="close_browser()" src="/img/close.png")
