--- a/views/partials/menores.jade
+++ b/views/partials/menores.jade
@@ -76,3 +76,8 @@ div.info
                td
                   label.small_form Incapacidades
                   div(input-inline-edit="root.menor.incapacidades" on-save="set_menor_dirty()" ng-focus="edit()" tabindex="63")
+
+         h2.info_subtitle Observaciones del postulado 
+         p(ng-hide="not_empty(root.menor.mensaje)") No hay observaciones del postulado
+         div(ng-show="not_empty(root.menor.mensaje)") 
+            div(input-inline-text="root.menor.mensaje" on-save="set_dirty()" ng-focus="edit()" tabindex="206") 
