--- a/views/partials/myview.jade
+++ b/views/partials/myview.jade
@@ -31,3 +31,5 @@ div.myview_wrapper
         div.tab_content(ng-include="'/partials/myview_bienes'") 
       tab.info_tab(heading="Menores" select="menores()") 
         div.tab_content(ng-include="'/partials/myview_menores'")
+      tab.info_tab(heading="Estadisticas" select="stats()") 
+        div.tab_content(ng-include="'/partials/myview_stats'")
