--- a/views/partials/myview_relaut.jade
+++ b/views/partials/myview_relaut.jade
@@ -11,6 +11,15 @@ div.info_wrapper
       h2.info_subtitle Datos
         div.inline.inline-heading {{ root.relaut.titulo }}
       hr.title_separator
+      img.icon.right(ng-show="root.relaut.mensaje" ng-click="message()" src="/img/message_exists.png")
+      img.icon.right(ng-hide="root.relaut.mensaje" ng-click="message()" src="/img/message.png")
+      div.message(ng-show="show_message")
+          div.message_dialog.right
+            strong Deja una observación acerca de esta ficha
+            textarea.message_content(ng-model="root.relaut.mensaje" ng-change="set_message_dirty()")
+            button.list_button(ng-click="save_message('relaut')") Envia observación
+            button.list_button.mleft10(ng-click="close_message()") Cerrar 
+            button.list_button.mleft10(ng-show="root.relaut.mensaje && !message_dirty" ng-click="del_message('relaut')") Borrar 
       div.form_wrapper
        table.tab_form_table
          tr
