--- a/public/css/main.css
+++ b/public/css/main.css
@@ -740,6 +740,7 @@ td.actions {
   float: left;
   width: 85%;
   margin-left: 20px;
+  margin-bottom: 50px;
 }
 .hecho_titulo {
   border : 1px solid #D6D6D6;
