--- a/views/partials/myview_stats.jade
+++ b/views/partials/myview_stats.jade
@@ -10,12 +10,12 @@ div.info
             th Total
             th Porcentaje
         tbody
-          tr.row(ng-repeat="d in root.delitos" ng-class-odd="'object_row_odd'" ng-class-even="'object_row_even'")
+          tr.row(ng-repeat="(codigo_penal, items) in root.delitos_by_codigo_penal" ng-class-odd="'object_row_odd'" ng-class-even="'object_row_even'")
             td
-              {{ d.codigo_penal}}
+              {{ codigo_penal }}
             td
-              {{ get_total(d.codigo_penal) }}
+              {{ get_total(codigo_penal) }}
             td
-              {{ get_percentage(d.codigo_penal) }}
+              {{ get_percentage(codigo_penal) }}
       
     div#diagram_wrapper
