--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ html
   head
     link(rel='stylesheet', href='/css/main.css') 
     link(href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css')
-    title jusypaz - Autentificación
+    title SIAR - Autentificación
   body
     div.home_container
       div.login
