--- a/views/tablero.jade
+++ b/views/tablero.jade
@@ -21,7 +21,7 @@ html(ng-app="jusypazApp" manifest="/cache.manifest" type="text/cache-manifest")
     script(src='/js/upload.js')
     script(src='/js/d3.v3.min.js')
 
-    title jusypaz - Tablero de inicio
+    title SIAR - Tablero de inicio
 
   body
     div.navigation_header.centered
