--- a/views/inicio.jade
+++ b/views/inicio.jade
@@ -14,7 +14,7 @@ html(ng-app="jusypazNormalApp" manifest="/cache.manifest" type="text/cache-manif
     script(src='/js/file_upload.js')
     script(src='/js/d3.v3.min.js')
 
-    title jusypaz - Página de inicio
+    title SIAR - Página de inicio
 
   body
     div.navigation_header.centered
