--- a/views/partials/jyp_fosas.jade
+++ b/views/partials/jyp_fosas.jade
@@ -78,7 +78,7 @@ div.info_wrapper
                div(input-inline-edit="root.fosa.long" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="28")      
 
 
-      h2.info_subtitle Exumada
+      h2.info_subtitle Exhumada
       table.tab_form_table
          tr
             td
