--- a/views/partials/myview_fosas.jade
+++ b/views/partials/myview_fosas.jade
@@ -90,7 +90,7 @@ div.info_wrapper
                div.myview_form_value {{root.fosa.long}}
 
 
-      h2.info_subtitle Exumada
+      h2.info_subtitle Exhumada
       hr.title_separator
       div.form_wrapper
        table.tab_form_table
