--- a/views/partials/pdf_view.jade
+++ b/views/partials/pdf_view.jade
@@ -448,7 +448,7 @@ div.myview_wrapper
                div.myview_form_value #{fosa.long}
 
 
-      h2.info_subtitle Exumada
+      h2.info_subtitle Exhumada
       hr.title_separator
       div.form_wrapper
        table.tab_form_table
