--- a/views/partials/jyp_delitos.jade
+++ b/views/partials/jyp_delitos.jade
@@ -186,7 +186,7 @@ div.info_wrapper
                   label.small_form Pertenencia
                   div(input-inline-edit="otro.pertenencia" on-save="set_dirty()" ng-focus="edit()" tabindex="103")
                   label.small_form Participación
-                  div(input-inline-edit="otro.participacion" on-save="set_dirty()" ng-focus="edit()" tabindex="104")
+                  div(input-inline-text="otro.participacion" on-save="set_dirty()" ng-focus="edit()" tabindex="104")
 
       h2.info_subtitle Victimas
       label.small_form Numbero de victimas 
