--- a/views/partials/jyp_opconjuntas.jade
+++ b/views/partials/jyp_opconjuntas.jade
@@ -33,6 +33,10 @@ div.info_wrapper
             td
                label.small_form Apellidos implicado
                div(input-inline-edit="root.op_conjunta.apellidos_implicado" on-save="set_op_conjunta_dirty()" ng-focus="edit()" tabindex="17")
+         tr
+            td
+               label.small_form Narración del hecho 
+               div(input-inline-text="root.op_conjunta.narracion" on-save="set_op_conjunta_dirty()" ng-focus="edit()" tabindex="20")
    
       h2.info_subtitle Observaciones del postulado 
       p(ng-hide="not_empty(root.op_conjunta.mensaje)") No hay observaciones del postulado
