--- a/views/partials/jyp_parapolitica.jade
+++ b/views/partials/jyp_parapolitica.jade
@@ -46,17 +46,17 @@ div.info_wrapper
          tr
             td
                label.small_form Narración de los hechos
-               div(input-inline-edit="root.parapolitica.narracion" on-save="set_pp_dirty()" ng-focus="edit()" tabindex="31")
+               div(input-inline-text="root.parapolitica.narracion" on-save="set_pp_dirty()" ng-focus="edit()" tabindex="31")
 
       h2.info_subtitle.inline Georeferenciación     
       table.tab_form_table
          tr
             td
                label.small_form Pais
-               div(input-inline-edit="root.parapolitica.pais" on-save="set_parapolitica_dirty()" ng-focus="edit()" ng-focus="edit()" tabindex="41")
+               div(input-inline-select="root.parapolitica.pais" opciones="root.paises" on-save="set_parapolitica_dirty()" ng-focus="edit()" ng-focus="edit()" tabindex="41")
             td
                label.small_form Departamento
-               div(input-inline-edit="root.parapolitica.departamento" on-save="set_parapolitica_dirty()" ng-focus="edit()" tabindex="42")
+               div(input-inline-select="root.parapolitica.departamento" opciones="root.pp_depts" on-save="set_parapolitica_dirty()" ng-focus="edit()" tabindex="42")
             td
                label.small_form Municipio
                div(input-inline-edit="root.parapolitica.municipio" on-save="set_parapolitica_dirty()" ng-focus="edit()" tabindex="43")
@@ -67,13 +67,6 @@ div.info_wrapper
             td
                label.small_form Vereda
                div(input-inline-edit="root.parapolitica.vereda" on-save="set_parapolitica_dirty()" ng-focus="edit()" tabindex="52")
-         tr
-            td
-               label.small_form Latitud
-               div(input-inline-edit="root.parapolitica.lat" on-save="set_parapolitica_dirty()" ng-focus="edit()" tabindex="61")
-            td               
-               label.small_form Longitud
-               div(input-inline-edit="root.parapolitica.long" on-save="set_parapolitica_dirty()" ng-focus="edit()" tabindex="62") 
 
       h2.info_subtitle Observaciones del postulado 
       p(ng-hide="not_empty(root.parapolitica.mensaje)") No hay observaciones del postulado
