--- a/views/partials/jyp_delitos.jade
+++ b/views/partials/jyp_delitos.jade
@@ -153,7 +153,7 @@ div.info_wrapper
                div(input-inline-edit="participante.confesado" on-save="set_dirty()" ng-focus="edit()" tabindex="35")
             td
                label.small_form Hora en mención del hecho
-               div(input-inline-edit="participante.hora_mencion" on-save="set_dirty()" ng-focus="edit()" tabindex="36")
+               div(input-inline-time="participante.hora_mencion" on-save="set_dirty()" ng-focus="edit()" tabindex="36")
          tr
             td 
                label.small_form Datos sobre pertenencia grupo armado
